Navbar bug on mobile fixed, ready for illustration

--- a/demo/css/style.css
+++ b/demo/css/style.css
@@ -37,11 +37,17 @@ img {
 }
 
 #sideBarIcon{
+    text-align: center;
     margin:5px;
+    padding: 16px;
     width: 48px;
     height:48px;
     border-radius: 100%;
     background: none;
+}
+.w3-white#sideBarIcon,
+.w3-white#sideBarIcon:hover {
+    color:inherit!important;
 }
 
 .w3-sidebar {
@@ -107,7 +113,7 @@ video {
 }
 
 #heroText {
-    top: 56%;
+    top: 55%;
     width: 90%;
     max-width: 1100px;
 }
